// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocLinkButton renders 1`] = `
<React.Fragment>
  <Dropdown
    navbar={false}
  >
    <DropdownToggle
      className="Button"
    >
      Link this LOC to another LOC
    </DropdownToggle>
    <DropdownMenu
      align="left"
      alignRight={false}
      flip={true}
    >
      <DropdownItem
        as={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          }
        }
        disabled={false}
        onClick={[Function]}
      >
        Link to an existing LOC
      </DropdownItem>
      <DropdownItem
        as={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          }
        }
        disabled={false}
        onClick={[Function]}
      >
        Link to a new Identity LOC
      </DropdownItem>
      <DropdownItem
        as={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          }
        }
        disabled={false}
        onClick={[Function]}
      >
        Link to a new Transaction LOC
      </DropdownItem>
    </DropdownMenu>
  </Dropdown>
  <LocLinkExistingDialog
    exit={[Function]}
    show={false}
  />
  <LocCreationDialog
    exit={[Function]}
    locRequest={
      Object {
        "locType": "Transaction",
        "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
        "userIdentity": Object {
          "email": "john.doe@logion.network",
          "firstName": "John",
          "lastName": "Doe",
          "phoneNumber": "+1234",
        },
      }
    }
    onSuccess={[Function]}
    show={false}
  />
</React.Fragment>
`;

exports[`LocLinkButton renders LINK_EXISTING 1`] = `
<React.Fragment>
  <Dropdown
    navbar={false}
  >
    <DropdownToggle
      className="Button"
    >
      Link this LOC to another LOC
    </DropdownToggle>
    <DropdownMenu
      align="left"
      alignRight={false}
      flip={true}
    >
      <DropdownItem
        as={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          }
        }
        disabled={false}
        onClick={[Function]}
      >
        Link to an existing LOC
      </DropdownItem>
      <DropdownItem
        as={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          }
        }
        disabled={false}
        onClick={[Function]}
      >
        Link to a new Identity LOC
      </DropdownItem>
      <DropdownItem
        as={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          }
        }
        disabled={false}
        onClick={[Function]}
      >
        Link to a new Transaction LOC
      </DropdownItem>
    </DropdownMenu>
  </Dropdown>
  <LocLinkExistingDialog
    exit={[Function]}
    show={true}
  />
  <LocCreationDialog
    exit={[Function]}
    locRequest={
      Object {
        "locType": "Transaction",
        "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
        "userIdentity": Object {
          "email": "john.doe@logion.network",
          "firstName": "John",
          "lastName": "Doe",
          "phoneNumber": "+1234",
        },
      }
    }
    onSuccess={[Function]}
    show={false}
  />
</React.Fragment>
`;

exports[`LocLinkButton renders LINK_NEW_IDENTITY 1`] = `
<React.Fragment>
  <Dropdown
    navbar={false}
  >
    <DropdownToggle
      className="Button"
    >
      Link this LOC to another LOC
    </DropdownToggle>
    <DropdownMenu
      align="left"
      alignRight={false}
      flip={true}
    >
      <DropdownItem
        as={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          }
        }
        disabled={false}
        onClick={[Function]}
      >
        Link to an existing LOC
      </DropdownItem>
      <DropdownItem
        as={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          }
        }
        disabled={false}
        onClick={[Function]}
      >
        Link to a new Identity LOC
      </DropdownItem>
      <DropdownItem
        as={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          }
        }
        disabled={false}
        onClick={[Function]}
      >
        Link to a new Transaction LOC
      </DropdownItem>
    </DropdownMenu>
  </Dropdown>
  <LocLinkExistingDialog
    exit={[Function]}
    show={false}
  />
  <LocCreationDialog
    exit={[Function]}
    locRequest={
      Object {
        "locType": "Identity",
        "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
        "userIdentity": Object {
          "email": "john.doe@logion.network",
          "firstName": "John",
          "lastName": "Doe",
          "phoneNumber": "+1234",
        },
      }
    }
    onSuccess={[Function]}
    show={true}
  />
</React.Fragment>
`;

exports[`LocLinkButton renders LINK_NEW_TRANSACTION 1`] = `
<React.Fragment>
  <Dropdown
    navbar={false}
  >
    <DropdownToggle
      className="Button"
    >
      Link this LOC to another LOC
    </DropdownToggle>
    <DropdownMenu
      align="left"
      alignRight={false}
      flip={true}
    >
      <DropdownItem
        as={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          }
        }
        disabled={false}
        onClick={[Function]}
      >
        Link to an existing LOC
      </DropdownItem>
      <DropdownItem
        as={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          }
        }
        disabled={false}
        onClick={[Function]}
      >
        Link to a new Identity LOC
      </DropdownItem>
      <DropdownItem
        as={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          }
        }
        disabled={false}
        onClick={[Function]}
      >
        Link to a new Transaction LOC
      </DropdownItem>
    </DropdownMenu>
  </Dropdown>
  <LocLinkExistingDialog
    exit={[Function]}
    show={false}
  />
  <LocCreationDialog
    exit={[Function]}
    locRequest={
      Object {
        "locType": "Transaction",
        "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
        "userIdentity": Object {
          "email": "john.doe@logion.network",
          "firstName": "John",
          "lastName": "Doe",
          "phoneNumber": "+1234",
        },
      }
    }
    onSuccess={[Function]}
    show={true}
  />
</React.Fragment>
`;
